--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,13 @@ edition = "2021"
 
 [dependencies]
 env_logger = "0.9.1"
-reqwest = { version = "0.11.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
-serde = { version = "1.0.147", features = ["derive"] }
+log = "0.4.17"
+
+[dependencies.reqwest]
+version = "0.11.12"
+default-features = false
+features = ["json", "rustls-tls", "blocking"]
+
+[dependencies.serde]
+version = "1.0.147"
+features = ["derive"]
