--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ log = "0.4.17"
 [dependencies.reqwest]
 version = "0.11.12"
 default-features = false
-features = ["json", "rustls-tls", "blocking"]
+features = ["json", "rustls-tls", "blocking", "multipart"]
 
 [dependencies.serde]
 version = "1.0.147"
