--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,28 @@ name = "iot-central"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+default = ["ftdi"]
+ftdi = ["dep:ftdi-embedded-hal", "dep:ftdi"]
+rpi = ["dep:linux-embedded-hal"]
+
 [dependencies]
 ctrlc = "3.2.3"
 env_logger = "0.9.1"
 log = "0.4.17"
+sgp30 = "0.3.1"
+
+[dependencies.ftdi]
+version = "0.1.3"
+optional = true
+
+[dependencies.ftdi-embedded-hal]
+version = "0.13.0"
+optional = true
+
+[dependencies.linux-embedded-hal]
+version = "0.3.2"
+optional = true
 
 [dependencies.reqwest]
 version = "0.11.12"
