Made sensor functions generic

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ sgp30 = "0.3.1"
 bme280 = "0.2.1"
 tsl2591 = "0.2.0"
 shared-bus = "0.2.4"
+embedded-hal = "0.2.7"
 
 [dependencies.ftdi]
 version = "0.1.3"
