--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,8 @@ bme280 = "0.2.1"
 tsl2591 = "0.2.0"
 shared-bus = "0.2.4"
 embedded-hal = "0.2.7"
-tokio = { version = "1.23.0", features = ["full"] }
+async-channel = "1.8.0"
+smol = "1.3.0"
 
 [dependencies.ftdi]
 version = "0.1.3"
