--- a/rust-async/Cargo.toml
+++ b/rust-async/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 [dependencies]
 finnhub-rs = "0.1.2"
 tokio = { version = "1.40.0", features = ["full"] }
+tokio-util = { version = "0.7.12", features = ["rt"] }
